# SAAI.Plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake.xml  copy.bat
doc/: Document.md  GetStarted.md  软件解析.pptx
img/: VS生成工具  工具链  构建成功  构建目标  环境变量  编译配置  运行配置
saai/include/chatbot/: ChatBot.h
saai/include/config/: Config.h  INIReader.h
saai/include/core/: AI.h  AIBeh.h  AIMain.h  AIPed.h  AudioProcessor.h  ContentGenerator.h  ContextGenerator.h  SharedMem.h
saai/include/shared/: PedSpawner.h  Speak.h  Structs.h  Subtitle.h  utils.h
saai/include/svc-client/: SVCClient.h
saai/include/unittest/: UnitTest.h
saai/src/: Config.cpp  Main.cpp  SVCClient.cpp  Speak.cpp
source/: AIBeh.h  AIMain.cpp  AIMain.h  AIPed.cpp  AIPed.h  AudioProcessor.h  CMakeLists.txt  ChatBot.h  ChatController.cpp  ChatController.h  CheatActivate.h  Config.cpp  Config.h  ContentProcessor.h  INIReader.h  Log.cpp  Log.h  Main.cpp  PedSpawner.cpp  PedSpawner.h  SVCClient.cpp  SVCClient.h  SharedMem.h  Speak.cpp  Speak.h  Subtitle.cpp  Subtitle.h  ThreadPool.cpp  ThreadPool.h  UnitTest.h
source/chatbot/: ChatBot.h  JSON.h
source/config/: Config.h
source/core/: AIMain.h  AIPed.h  AudioProcessor.h  ContentGenerator.h  ContextGenerator.cpp  ContextGenerator.h  SharedMem.cpp  SharedMem.h
source/shared/: KeyActivate.cpp  KeyActivate.h  PedSpawner.h  Speak.h  Subtitle.h  ThreadPool.h
source/svc-client/: SVCClient.h
source/unittest/: UnitTest.h
